--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-encrypted-storage": "^4.0.3",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
